refactor: Fix javac warnings